# Simulador

./: AND.cpp  AND.h  Alocar.cpp  Alocar.h  AppSimulador.cpp  AppSimulador.h  BOARD.cpp  BOARD.h  BUttonComponentApp.cpp  BUttonComponentApp.h  CMakeLists.txt  CalcLogico.cpp  CalcLogico.h  Componente.cpp  Componente.h  Componentes.cpp  Componentes.h  ComponentesApp.cpp  ComponentesApp.h  IO.cpp  IO.h  NOT.cpp  NOT.h  OR.cpp  OR.h  Protoboard.cpp  Protoboard.h  README.md  WIRE.cpp  WIRE.h  main.cpp
